[gd_scene format=3 uid="uid://d4nahe1lhtwqr"]

[ext_resource type="Texture2D" uid="uid://b3cvatfjsef4p" path="res://levels/office/assets/door.png" id="1_05v0y"]
[ext_resource type="Script" uid="uid://531v8lisfg1w" path="res://entities/door/door_base.gd" id="1_bfv6c"]
[ext_resource type="Texture2D" uid="uid://bo1rdbgst5fug" path="res://entities/lock/lock.png" id="3_dsbe1"]

[sub_resource type="Animation" id="Animation_bfv6c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dsbe1"]
resource_name = "close"

[sub_resource type="Animation" id="Animation_6sqah"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.100603454, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uq1c4"]
_data = {
&"RESET": SubResource("Animation_bfv6c"),
&"close": SubResource("Animation_dsbe1"),
&"open": SubResource("Animation_6sqah")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r5xgf"]
size = Vector2(6, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_05v0y"]
size = Vector2(11, 16)

[node name="Door" type="Node2D" unique_id=580264968 groups=["npc"]]
script = ExtResource("1_bfv6c")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1393363650]
texture = ExtResource("1_05v0y")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1264642687]
libraries/ = SubResource("AnimationLibrary_uq1c4")

[node name="StaticBody2D" type="StaticBody2D" parent="." unique_id=127913262]
collision_layer = 65535
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" unique_id=895962696]
shape = SubResource("RectangleShape2D_r5xgf")

[node name="RightInteractArea2D" type="Area2D" parent="." unique_id=1111316578]
collision_layer = 3
collision_mask = 3

[node name="RightCollisionShape2D" type="CollisionShape2D" parent="RightInteractArea2D" unique_id=229157892]
position = Vector2(6, 0)
shape = SubResource("RectangleShape2D_05v0y")

[node name="LeftInteractArea2D" type="Area2D" parent="." unique_id=1964837549]
collision_layer = 3
collision_mask = 3

[node name="LeftCollisionShape2D" type="CollisionShape2D" parent="LeftInteractArea2D" unique_id=1525906780]
position = Vector2(-6, 0)
shape = SubResource("RectangleShape2D_05v0y")

[node name="OpenTimer" type="Timer" parent="." unique_id=1919160651]
wait_time = 3.0
one_shot = true

[node name="Lock" type="Sprite2D" parent="." unique_id=162113410]
modulate = Color(1, 1, 1, 0.627451)
position = Vector2(-4.7683716e-07, 4.7683716e-07)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("3_dsbe1")

[connection signal="body_entered" from="RightInteractArea2D" to="." method="_on_right_body_entered"]
[connection signal="body_exited" from="RightInteractArea2D" to="." method="_on_right_body_exited"]
[connection signal="body_entered" from="LeftInteractArea2D" to="." method="_on_left_body_entered"]
[connection signal="body_exited" from="LeftInteractArea2D" to="." method="_on_left_body_exited"]
[connection signal="timeout" from="OpenTimer" to="." method="_on_open_timer_timeout"]
